Updates for adding alignment fixes

--- a/customStyle.css
+++ b/customStyle.css
@@ -1422,12 +1422,12 @@ responsive
                 background-color: #C29243;
                 border-radius: 8px;
                 left: -5%;
-                top: 10px;
+                top: 5px;
             }
 
             .navbar .logo {
                 margin-right: auto;
-                padding: 40px 0px 22px 0px;
+                padding: 25px 0px 22px 0px;
             }
 
             .hamburger-menu {
@@ -1491,12 +1491,12 @@ responsive
                 background-color: #C29243;
                 border-radius: 8px;
                 left: -5%;
-                top: 10px;
+                top: 5px;
             }
 
             .navbar .logo {
                 margin-right: auto;
-                padding: 40px 0px 22px 0px;
+                padding: 25px 0px 22px 0px;
             }
 
             .hamburger-menu {
@@ -1579,7 +1579,7 @@ responsive
                 background-color: #C29243;
                 border-radius: 8px;
                 left: -5%;
-                top: 10px;
+                top: 5px;
             }
 
             .hamburger-menu {
@@ -1593,7 +1593,7 @@ responsive
 
             .navbar .logo {
                 margin-right: auto;
-                padding: 40px 0px 22px 0px;
+                padding: 25px 0px 22px 0px;
             }
 
 
